adicao de mais metodos de gerenciametno de persistencia